# MosaicGiphyCpp

./: .dockerignore  .gitignore  CMakeLists.txt  DisplayImage.cpp  Dockerfile  MosaicFromCats.cpp  MosaicFromSmallCats.cpp  README.md  TODO  blackToWhite.cpp  constants.json  constants_color.json  costantslocal.json  main.py  openGrayImage.cpp  output_small.json  processRawDataColor.cpp  processRawDataMultithread.cpp  replacePixels.cpp  testjson.json  tiles_dict.json
include/: ImageProcessor.hpp  ImageProcessorColor.hpp  MosaicFromSmallCats.hpp  MyClass.hpp  Saveandload3dvec.hpp  constants.hpp
src/: ImageProcessor.cpp  ImageProcessorColor.cpp  MosaicFromSmallCats.cpp  MyClass.cpp  Saveandload3dvec.cpp  main.cpp
